[gd_scene load_steps=6 format=3 uid="uid://bxbv0pjrw5m0i"]

[ext_resource type="Script" path="res://generate_cards.gd" id="1_10yab"]
[ext_resource type="Theme" uid="uid://doer8mqlh26ij" path="res://Theme.tres" id="1_fm4ds"]
[ext_resource type="StyleBox" uid="uid://c1c6qkqaplatx" path="res://CardPanel.tres" id="3_po1ig"]
[ext_resource type="FontFile" uid="uid://uif4mjsdqker" path="res://Oswald-VariableFont_wght.ttf" id="4_u3d5b"]

[sub_resource type="LabelSettings" id="LabelSettings_0ut5y"]
font = ExtResource("4_u3d5b")
font_size = 60
font_color = Color(0, 0, 0, 1)
shadow_size = 5
shadow_color = Color(0, 0, 0, 1)

[node name="GenerateCards" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_fm4ds")
script = ExtResource("1_10yab")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0338533, 0.0338533, 0.0338533, 1)

[node name="CardPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 44.0
offset_top = -752.0
offset_right = -48.0
offset_bottom = 356.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = ExtResource("3_po1ig")

[node name="CardLabel" type="Label" parent="CardPanel"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -554.0
offset_bottom = 554.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "Carta Gerada aqui "
label_settings = SubResource("LabelSettings_0ut5y")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="GenerateButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -119.0
offset_top = -552.0
offset_right = 129.0
offset_bottom = -187.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("1_fm4ds")
theme_override_font_sizes/font_size = 240
text = "ðŸ—˜"
flat = true

[connection signal="pressed" from="GenerateButton" to="." method="_on_generate_button_pressed"]
